--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,11 @@ packages = [
 cloudflare = ">=4.3.1"
 fastapi = ">=0.121.3"
 httpx = ">=0.27.2"
-openai = ">=2.8.1"
 poetry = ">=2.2.1"
 poetry-core = ">=2.2.1"
 pydantic = ">=2.12.4"
 python = ">=3.11,<4.0"
+tqdm = ">=4.67.1"
 uvicorn = ">=0.32.0"
 
 [tool.poetry.group.dev.dependencies]
