--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ packages = [
 
 [tool.poetry.dependencies]
 cloudflare = ">=4.3.1"
-fastapi = ">=0.121.3"
+flask = { version = ">=3.1.2", extras = ["async"] }
 httpx = ">=0.27.2"
 poetry = ">=2.2.1"
 poetry-core = ">=2.2.1"
